@@ -1,3 +1,12 @@
+2004-07-30  David Jee  <djee@redhat.com>
+
+	* gnu/java/awt/peer/gtk/GtkFramePeer.java
+	(create): Set the icon image.
+	(nativeSetIconImage): New native method declaration.
+	(setIconImage): Implement.
+	* jni/gtk-peer/gnu_java_awt_peer_gtk_GtkWindowPeer.c
+	(nativeSetIconImage): New function.
+
 2004-07-30  Dalibor Topic <robilad@kaffe.org>
 
 	* native/jni/gtk-peer/gnu_java_awt_peer_gtk_GtkFileDialogPeer.c
